crates/gob-plan/src/grl/parse/tests/snapshots/gob_plan__grl__parse__tests__CI002.snap
---
source: crates/gob-plan/src/grl/parse/tests/mod.rs
expression: dump(&p.file)
---
File {
   rules: [
    Rule {
       id: Word {
         text: "CI002",
        span: @5..10 
      },
      slug: StrLit {
         value: "permissions-declared",
        span: @11..33 
      },
      headers: [
        Spanned {
           node: Lang(
            One(
              Word {
                 text: "yaml",
                span: @43..47 
              }
            )
          ),
          span: @38..47 
        },
        Spanned {
           node: Severity(
            Warn
          ),
          span: @50..63 
        }
      ],
      clauses: [
        Spanned {
           node: Find(
            Binding {
               name: Word {
                 text: "w",
                span: @72..73 
              },
              source: Shape(
                Spanned {
                   node: Kind {
                     kind: Word {
                       text: "file",
                      span: @75..79 
                    },
                    fields: [],
                  arg: None 
                },
                span: @75..79 
              }
            ),
            rels: [],
          filter: Some(
            Spanned {
               node: GlobMatch {
                 lhs: Spanned {
                   node: Path(
                    Path {
                       segments: [
                        Word {
                           text: "w",
                          span: @86..87 
                        },
                        Word {
                           text: "path",
                          span: @88..92 
                        }
                      ],
                      span: @86..92 
                    }
                  ),
                  span: @86..92 
                },
                rhs: Spanned {
                   node: Literal(
                    Spanned {
                       node: Str(
                        ".github/workflows/*.{yml,yaml}"
                      ),
                      span: @101..133 
                    }
                  ),
                  span: @101..133 
                } 
              },
              span: @86..133 
            }
          ),
          span: @72..133 
        }
      ),
      span: @67..133 
    },
    Spanned {
       node: Quant {
         quant: No,
        binding: Binding {
           name: Word {
             text: "k",
            span: @139..140 
          },
          source: Shape(
            Spanned {
               node: Kind {
                 kind: Word {
                   text: "key",
                  span: @142..145 
                },
                fields: [
                  FieldEq {
                     name: Word {
                       text: "path",
                      span: @146..150 
                    },
                    value: Spanned {
                       node: Str(
                        "/permissions"
                      ),
                      span: @153..167 
                    },
                    span: @146..167 
                  }
                ],
                arg: None 
              },
              span: @142..168 
            }
          ),
          rels: [
            Spanned {
               node: Containment {
                 directly: false,
                dir: Inside,
                object: Term(
                  Spanned {
                     node: Path(
                      Path {
                         segments: [
                          Word {
                             text: "w",
                            span: @176..177 
                          }
                        ],
                        span: @176..177 
                      }
                    ),
                    span: @176..177 
                  }
                ) 
              },
              span: @169..177 
            }
          ],
          filter: None,
          span: @139..177 
        } 
      },
      span: @136..177 
    },
    Spanned {
       node: Quant {
         quant: Some,
        binding: Binding {
           name: Word {
             text: "j",
            span: @185..186 
          },
          source: Shape(
            Spanned {
               node: Kind {
                 kind: Word {
                   text: "key",
                  span: @188..191 
                },
                fields: [
                  FieldEq {
                     name: Word {
                       text: "path",
                      span: @192..196 
                    },
                    value: Spanned {
                       node: Str(
                        "/jobs/*"
                      ),
                      span: @199..208 
                    },
                    span: @192..208 
                  }
                ],
                arg: None 
              },
              span: @188..209 
            }
          ),
          rels: [
            Spanned {
               node: Containment {
                 directly: false,
                dir: Inside,
                object: Term(
                  Spanned {
                     node: Path(
                      Path {
                         segments: [
                          Word {
                             text: "w",
                            span: @217..218 
                          }
                        ],
                        span: @217..218 
                      }
                    ),
                    span: @217..218 
                  }
                ) 
              },
              span: @210..218 
            }
          ],
          filter: Some(
            Spanned {
               node: Quant {
                 quant: No,
                binding: Binding {
                   name: Word {
                     text: "p",
                    span: @228..229 
                  },
                  source: Shape(
                    Spanned {
                       node: Kind {
                         kind: Word {
                           text: "key",
                          span: @231..234 
                        },
                        fields: [
                          FieldEq {
                             name: Word {
                               text: "name",
                              span: @235..239 
                            },
                            value: Spanned {
                               node: Str(
                                "permissions"
                              ),
                              span: @242..255 
                            },
                            span: @235..255 
                          }
                        ],
                        arg: None 
                      },
                      span: @231..256 
                    }
                  ),
                  rels: [
                    Spanned {
                       node: Containment {
                         directly: true,
                        dir: Inside,
                        object: Term(
                          Spanned {
                             node: Path(
                              Path {
                                 segments: [
                                  Word {
                                     text: "j",
                                    span: @273..274 
                                  }
                                ],
                                span: @273..274 
                              }
                            ),
                            span: @273..274 
                          }
                        ) 
                      },
                      span: @257..274 
                    }
                  ],
                  filter: None,
                  span: @228..274 
                } 
              },
              span: @225..274 
            }
          ),
          span: @185..274 
        } 
      },
      span: @180..274 
    },
    Spanned {
       node: Report(
        Report {
           target: Word {
             text: "w",
            span: @284..285 
          },
          message: Message {
             parts: [
              Text {
                 value: "workflow has no top-level permissions and job ",
                span: @287..333 
              },
              Interp {
                 path: Path {
                   segments: [
                    Word {
                       text: "j",
                      span: @334..335 
                    },
                    Word {
                       text: "name",
                      span: @336..340 
                    }
                  ],
                  span: @334..340 
                },
                span: @333..341 
              },
              Text {
                 value: " declares none",
                span: @341..355 
              }
            ],
            span: @286..356 
          },
          when: None 
        }
      ),
      span: @277..356 
    }
  ],
  examples: [
    Example {
       expect: Expect {
         kind: Fire,
        span: @368..372 
      },
      lang: None,
      name: None,
      body: Inputs(
        [
          Spanned {
             node: File {
               path: StrLit {
                 value: ".github/workflows/ci.yml",
                span: @380..406 
              },
              text: BlockLit {
                 value: "name: ci                                 #~ warn\njobs:\n  build:\n    runs-on: ubuntu-latest",
                body: @410..520,
                span: @407..523 
              } 
            },
            span: @375..523 
          }
        ]
      ),
      span: @360..525 
    },
    Example {
       expect: Expect {
         kind: Clean,
        span: @536..541 
      },
      lang: None,
      name: None,
      body: Inputs(
        [
          Spanned {
             node: File {
               path: StrLit {
                 value: ".github/workflows/ci.yml",
                span: @549..575 
              },
              text: BlockLit {
                 value: "name: ci\npermissions: { contents: read }\njobs:\n  build: { runs-on: ubuntu-latest }",
                body: @579..681,
                span: @576..684 
              } 
            },
            span: @544..684 
          }
        ]
      ),
      span: @528..686 
    }
  ],
  explain: Some(
    Explain {
       text: BlockLit {
         value: "Without explicit permissions a workflow token gets the repository default,\noften write access.\n## Remedy\nAdd `permissions:` at the top level or to every job.",
        body: @700..877,
        span: @697..880 
      },
      span: @689..880 
    }
  ),
  span: @0..882 
}
] 
}
